<resources>
    <string name="app_name">CSI</string>
    <string name="badgeNo">ID #</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="registerHere">Register Here</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_e_mail">Confirm E-mail</string>
    <string name="already_registered">Already Registered?  Login</string>
    <string name="register">Register</string>
    <string name="create_case">Create New Case </string>
    <string name="open_case">Open Existing Case </string>
    <string name="forgot_password">Forgot Password </string>
    <string name="case_name">Case Name* </string>
    <string name="site_address">Site Address*</string>
    <string name="city">City*</string>
    <string name="state">State*</string>
    <string name="zip">Zip*</string>
    <string name="other_info">Location Notes</string>
    <string name="lead_csi">Lead CSI Badge #</string>
    <string name="launch_new">Launch New Case</string>
    <string name="requiredfields">*Required Fields</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="case_list_title">Case Number</string>
    <string name="button_title_send">Send</string>
    <string name="hint_badge_number">Enter ID #</string>

    <string-array name="userType">
        <item>Sender </item>
        <item>Receiver </item>
    </string-array>
</resources>
