<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="barbapplications.sft.RegistrationActivity">

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:background="#11000000"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_alignEnd="@+id/etFirstName"
        android:layout_alignRight="@+id/etFirstName"
        android:layout_below="@+id/etFirstName"
        android:layout_marginTop="16dp"
        android:background="#11000000"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/etLastName"
        android:layout_alignStart="@+id/etLastName"
        android:layout_below="@+id/etLastName"
        android:layout_marginTop="16dp"
        android:background="#11000000"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/etConfirmEmail"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/etUsername"
        android:layout_alignStart="@+id/etUsername"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="16dp"
        android:background="#11000000"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/confirm_e_mail"/>


    <EditText
        android:id="@+id/etUsername"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:ems="10"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail"
        android:layout_below="@+id/etConfirmEmail"
        android:layout_marginTop="16dp"
        android:background="#11000000"
        android:inputType="textPersonName"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail"
        android:layout_below="@+id/etUsername"
        android:layout_marginTop="16dp"
        android:background="#11000000"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@android:color/black"
        android:text="@string/register"
        android:textColor="@android:color/background_light" />

</RelativeLayout>
