<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="parent">

        <TextView
            android:id="@+id/caseItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:textColor="#000000"
            android:text="@string/case_list_title"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

    <EditText
        android:id="@+id/badgeNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_badge_number"
        android:inputType="number"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/row" />

    <ImageButton
        android:id="@+id/takePictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        app:layout_constraintTop_toBottomOf="@id/row"
        app:layout_constraintStart_toEndOf="@id/badgeNumber"
        android:background="@android:drawable/ic_menu_camera"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:textColor="@android:color/background_light"
        android:text="@string/button_title_send"
        app:layout_constraintTop_toBottomOf="@+id/badgeNumber"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>